# outlook-mail-assistant-skill

./: .gitignore  README.ko-KR.md  README.md  SKILL.md  generate_cover.py  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
references/: canonical-schema.md  msg-gotchas.md  pst-gotchas.md  sqlite-schema.md
scripts/: benchmark_export.py  benchmark_ingest.py  benchmark_task_extraction.py  convert_md_to_docx.py  execute_outlook_actions.py  export_outlook_json.py  export_task_reports.py  import_pst.py  init_db.py  init_workspace.py  seed_synthetic_mailset.py  summarize_benchmark_results.py
scripts/outlook_mail_assistant/: __init__.py  benchmarking.py  canonical_schema.py  docx_export.py  export_pipeline.py  extraction.py  msg_adapter.py  msg_import.py  outlook_actions.py  outlook_com.py  pst_import.py  report_exports.py  report_generation.py  skill_paths.py  storage.py  summary_reports.py  synthetic_dataset.py
tests/: conftest.py  test_benchmark_metrics.py  test_canonical_schema.py  test_execute_outlook_actions.py  test_export_pipeline.py  test_extraction.py  test_msg_adapter.py  test_msg_import.py  test_outlook_actions.py  test_outlook_com.py  test_outlook_com_live_smoke.py  test_pst_import.py  test_pst_import_live_smoke.py  test_report_exports.py  test_report_generation.py  test_skill_metadata.py  test_storage.py  test_store_traversal.py  test_summary_reports.py  test_synthetic_dataset.py
