[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-mail-assistant"
version = "0.1.0"
description = "Local-first Outlook mail ingestion, extraction, reporting, and follow-up workflows for Windows Outlook desktop environments."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
live = [
  "pywin32>=306; platform_system == 'Windows'",
]
msg = [
  "extract-msg>=0.45",
]

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["outlook_mail_assistant*"]

[tool.pyright]
include = ["scripts", "tests"]
extraPaths = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
